Update sub title

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Thomas Debelle
-subtitle: M.Sc. students @ KU Leuven
+subtitle: M.Sc. students in Electrical Engineering @ KU Leuven
 ---
