--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Thomas Debelle
-subtitle: M.Sc. student in Electrical Engineering @ KU Leuven
+subtitle: M.Sc. student in Electrical Engineering @ KU Leuven. Find out more about my projects and experience throughout this site. From CTFs to research and academic background.
 ---
